# bookstore

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  env.dev  pyproject.toml  pytest.ini
.github/workflows/: build.yml
bookstore/: settings.py  urls.py
order/: urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewset/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py  0002_rename_categories_product_category.py
product/models/: product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
