[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Booksote API"
authors = ["Rafael Correa <rafaelscorreadev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.15.2"
django-extensions = "^3.2.3"
django-debug-toolbar = "^5.0.1"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.10" 
django = "5.1.5"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
pytest-django = "^4.9.0"
factory-boy = "^3.3.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"